--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,12 @@
           <div class="page-name__line"></div>
           <p class="page-name__text">CONTACT</p>
         </div>
-        <svg class="header__logo">
-          <a class="header__logo" href="./index.html">
+        <a class="header__logo" href="./index.html">
+          <svg class="header__logo">
             <use class="header__logo" href="./images/icons.svg#icon-logo" />
-          </a>
-        </svg>
+          </svg>
+          <span class="hidden">Arch</span>
+        </a>
         <nav class="navbar">
           <ul class="navbar__menu">
             <li class="navbar__item">
@@ -154,6 +155,7 @@
         <svg class="footer__icon">
           <use href="./images/icons.svg#icon-footer" />
         </svg>
+        <span class="hidden">Arch</span>
       </a>
       <ul class="footer__list">
         <li class="footer__list-item">
