--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
           <div class="page-name__line"></div>
           <p class="page-name__text">HOME</p>
         </div>
-        <svg class="header__logo">
-          <a class="header__logo" href="./index.html">
+       <a class="header__logo" href="./index.html">
+          <svg class="header__logo">
             <use class="header__logo" href="./images/icons.svg#icon-logo" />
-          </a>
-        </svg>
+          </svg>
+          <span class="hidden">Arch</span>
+        </a>
         <nav class="navbar">
           <ul class="navbar__menu">
             <li class="navbar__item">
@@ -146,10 +147,11 @@
       </section>
     </main>
     <footer class="footer footer--contact container">
-      <a href="./index.html">
+       <a href="./index.html">
         <svg class="footer__icon">
           <use href="./images/icons.svg#icon-footer" />
         </svg>
+        <span class="hidden">Arch</span>
       </a>
       <ul class="footer__list">
         <li class="footer__list-item">
