--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
           <div class="page-name__line"></div>
           <p class="page-name__text">HOME</p>
         </div>
-       <a class="header__logo" href="./index.html">
+        <a
+          class="header__logo"
+          href="./index.html"
+          aria-label="Arch logo link to homepage"
+        >
           <svg class="header__logo">
             <use class="header__logo" href="./images/icons.svg#icon-logo" />
           </svg>
-          <span class="hidden">Arch</span>
         </a>
         <nav class="navbar">
           <ul class="navbar__menu">
@@ -147,11 +150,10 @@
       </section>
     </main>
     <footer class="footer footer--contact container">
-       <a href="./index.html">
+      <a href="./index.html" aria-label="Arch logo link to homepage">
         <svg class="footer__icon">
           <use href="./images/icons.svg#icon-footer" />
         </svg>
-        <span class="hidden">Arch</span>
       </a>
       <ul class="footer__list">
         <li class="footer__list-item">
