--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </a>
       </section>
     </main>
-    <footer class="footer footer--contact container">
+    <footer class="footer footer--index container">
       <a href="./index.html" aria-label="Arch logo link to homepage">
         <svg class="footer__icon">
           <use href="./images/icons.svg#icon-footer" />
